// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionCommand --exact updates existing exact versions 1`] = `
"v1.0.1

HEAD -> master, tag: v1.0.1

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"1.0.0\\"
+    \\"package-1\\": \\"1.0.1\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -5 +5 @@
-    \\"package-2\\": \\"1.0.0\\"
+    \\"package-2\\": \\"1.0.1\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-1\\": \\"1.0.0\\"
+    \\"package-1\\": \\"1.0.1\\"
@@ -7 +7 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\""
`;

exports[`VersionCommand --exact updates matching local dependencies of published packages with exact versions 1`] = `
"v1.0.1

HEAD -> master, tag: v1.0.1

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"1.0.1\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -8 +8 @@
-    \\"package-2\\": \\"^1.0.0\\"
+    \\"package-2\\": \\"1.0.1\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"1.0.1\\"
@@ -7 +7 @@
-    \\"package-3\\": \\"^1.0.0\\"
+    \\"package-3\\": \\"1.0.1\\"
@@ -10 +10 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\""
`;

exports[`VersionCommand --ignore-packages bumps all packages but ignored ones when major version selected 1`] = `
"v2.0.0

HEAD -> master, tag: v2.0.0

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"2.0.0\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
@@ -8 +8 @@
-    \\"package-2\\": \\"^1.0.0\\"
+    \\"package-2\\": \\"^2.0.0\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\","
`;

exports[`VersionCommand --ignore-packages does not bump anything if changed package is ignored 1`] = `
"Init commit

HEAD -> master

diff --git a/lerna.json b/lerna.json
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/lerna.json
@@ -0,0 +1,3 @@
+{
+  \\"version\\": \\"1.0.0\\"
+}
diff --git a/package.json b/package.json
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/package.json
@@ -0,0 +1,3 @@
+{
+  \\"name\\": \\"normal\\"
+}
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/packages/package-1/package.json
@@ -0,0 +1,4 @@
+{
+  \\"name\\": \\"package-1\\",
+  \\"version\\": \\"1.0.0\\"
+}
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/packages/package-2/package.json
@@ -0,0 +1,7 @@
+{
+  \\"name\\": \\"package-2\\",
+  \\"version\\": \\"1.0.0\\",
+  \\"dependencies\\": {
+    \\"package-1\\": \\"^1.0.0\\"
+  }
+}
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/packages/package-3/package.json
@@ -0,0 +1,10 @@
+{
+  \\"name\\": \\"package-3\\",
+  \\"version\\": \\"1.0.0\\",
+  \\"peerDependencies\\": {
+    \\"package-2\\": \\"^1.0.0\\"
+  },
+  \\"devDependencies\\": {
+    \\"package-2\\": \\"^1.0.0\\"
+  }
+}
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/packages/package-4/package.json
@@ -0,0 +1,7 @@
+{
+  \\"name\\": \\"package-4\\",
+  \\"version\\": \\"1.0.0\\",
+  \\"dependencies\\": {
+    \\"package-1\\": \\"^0.0.0\\"
+  }
+}
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
new file mode 100644
index SHA..SHA
--- /dev/null
+++ b/packages/package-5/package.json
@@ -0,0 +1,11 @@
+{
+  \\"name\\": \\"package-5\\",
+  \\"dependencies\\": {
+    \\"package-1\\": \\"^1.0.0\\"
+  },
+  \\"optionalDependencies\\": {
+    \\"package-3\\": \\"^1.0.0\\"
+  },
+  \\"private\\": true,
+  \\"version\\": \\"1.0.0\\"
+}"
`;

exports[`VersionCommand --ignore-packages versions changed non ignored packages: commit 1`] = `
"v1.0.1

HEAD -> master, tag: v1.0.1

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -7 +7 @@
-    \\"package-3\\": \\"^1.0.0\\"
+    \\"package-3\\": \\"^1.0.1\\"
@@ -10 +10 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\""
`;

exports[`VersionCommand --ignore-packages versions changed non ignored packages: console output 1`] = `
"
Changes:
 - package-3: 1.0.0 => 1.0.1
 - package-4: 1.0.0 => 1.0.1
 - package-5: 1.0.0 => 1.0.1 (private)
"
`;

exports[`VersionCommand --ignore-packages versions changed non ignored packages: gitHead 1`] = `
Object {
  "devDependencies": Object {
    "package-2": "^1.0.0",
  },
  "name": "package-3",
  "peerDependencies": Object {
    "package-2": "^1.0.0",
  },
  "version": "1.0.1",
}
`;

exports[`VersionCommand --ignore-packages versions changed non ignored packages: prompt 1`] = `
Array [
  Array [
    "Select a new version (currently 1.0.0)",
    Object {
      "choices": Array [
        Object {
          "name": "Patch (1.0.1)",
          "value": "1.0.1",
        },
        Object {
          "name": "Minor (1.1.0)",
          "value": "1.1.0",
        },
        Object {
          "name": "Major (2.0.0)",
          "value": "2.0.0",
        },
        Object {
          "name": "Prepatch (1.0.1-alpha.0)",
          "value": "1.0.1-alpha.0",
        },
        Object {
          "name": "Preminor (1.1.0-alpha.0)",
          "value": "1.1.0-alpha.0",
        },
        Object {
          "name": "Premajor (2.0.0-alpha.0)",
          "value": "2.0.0-alpha.0",
        },
        Object {
          "name": "Custom Prerelease",
          "value": "PRERELEASE",
        },
        Object {
          "name": "Custom Version",
          "value": "CUSTOM",
        },
      ],
    },
  ],
]
`;

exports[`VersionCommand --ignore-packages versions changed packages but ignored in independent mode: commit 1`] = `
"Publish

 - package-1@1.0.1
 - package-3@4.0.0
 - package-4@4.1.0
 - package-5@5.0.1

HEAD -> master, tag: package-5@5.0.1, tag: package-4@4.1.0, tag: package-3@4.0.0, tag: package-1@1.0.1

diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"3.0.0\\",
+  \\"version\\": \\"4.0.0\\",
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"4.0.0\\",
+  \\"version\\": \\"4.1.0\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-3\\": \\"^3.0.0\\"
+    \\"package-3\\": \\"^4.0.0\\"
@@ -7 +7 @@
-  \\"version\\": \\"5.0.0\\"
+  \\"version\\": \\"5.0.1\\""
`;

exports[`VersionCommand --ignore-packages versions changed packages but ignored in independent mode: console output 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.0.1
 - package-3: 3.0.0 => 4.0.0
 - package-4: 4.0.0 => 4.1.0
 - package-5: 5.0.0 => 5.0.1 (private)
"
`;

exports[`VersionCommand --ignore-packages versions changed packages but ignored in independent mode: gitHead 1`] = `
Object {
  "name": "package-1",
  "version": "1.0.1",
}
`;

exports[`VersionCommand --no-git-tag-version versions changed packages without git commit or push: gitHead 1`] = `
Object {
  "name": "package-1",
  "version": "1.0.1",
}
`;

exports[`VersionCommand --no-push versions changed packages without git push 1`] = `
"v1.0.1

HEAD -> master, tag: v1.0.1

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^1.0.1\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -8 +8 @@
-    \\"package-2\\": \\"^1.0.0\\"
+    \\"package-2\\": \\"^1.0.1\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^1.0.1\\"
@@ -7 +7 @@
-    \\"package-3\\": \\"^1.0.0\\"
+    \\"package-3\\": \\"^1.0.1\\"
@@ -10 +10 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\""
`;

exports[`VersionCommand independent mode versions changed packages: commit 1`] = `
"Publish

 - package-1@1.0.1
 - package-2@2.1.0
 - package-3@4.0.0
 - package-4@4.1.0
 - package-5@5.0.1

HEAD -> master, tag: package-5@5.0.1, tag: package-4@4.1.0, tag: package-3@4.0.0, tag: package-2@2.1.0, tag: package-1@1.0.1

diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"2.0.0\\",
+  \\"version\\": \\"2.1.0\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^1.0.1\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"3.0.0\\",
+  \\"version\\": \\"4.0.0\\",
@@ -5 +5 @@
-    \\"package-2\\": \\"^2.0.0\\"
+    \\"package-2\\": \\"^2.1.0\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"4.0.0\\",
+  \\"version\\": \\"4.1.0\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-3\\": \\"^3.0.0\\"
+    \\"package-3\\": \\"^4.0.0\\"
@@ -7 +7 @@
-  \\"version\\": \\"5.0.0\\"
+  \\"version\\": \\"5.0.1\\""
`;

exports[`VersionCommand independent mode versions changed packages: console output 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.0.1
 - package-2: 2.0.0 => 2.1.0
 - package-3: 3.0.0 => 4.0.0
 - package-4: 4.0.0 => 4.1.0
 - package-5: 5.0.0 => 5.0.1 (private)
"
`;

exports[`VersionCommand independent mode versions changed packages: gitHead 1`] = `
Object {
  "name": "package-1",
  "version": "1.0.1",
}
`;

exports[`VersionCommand normal mode bumps all packages when major version selected 1`] = `
"v2.0.0

HEAD -> master, tag: v2.0.0

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"2.0.0\\"
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"2.0.0\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^2.0.0\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
@@ -8 +8 @@
-    \\"package-2\\": \\"^1.0.0\\"
+    \\"package-2\\": \\"^2.0.0\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^2.0.0\\"
@@ -7 +7 @@
-    \\"package-3\\": \\"^1.0.0\\"
+    \\"package-3\\": \\"^2.0.0\\"
@@ -10 +10 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"2.0.0\\""
`;

exports[`VersionCommand normal mode only bumps changed packages when non-major version selected 1`] = `
"v1.1.0

HEAD -> master, tag: v1.1.0

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.1.0\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.1.0\\","
`;

exports[`VersionCommand normal mode versions changed packages: commit 1`] = `
"v1.0.1

HEAD -> master, tag: v1.0.1

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -5 +5 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^1.0.1\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
@@ -8 +8 @@
-    \\"package-2\\": \\"^1.0.0\\"
+    \\"package-2\\": \\"^1.0.1\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"1.0.1\\",
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^1.0.1\\"
@@ -7 +7 @@
-    \\"package-3\\": \\"^1.0.0\\"
+    \\"package-3\\": \\"^1.0.1\\"
@@ -10 +10 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"1.0.1\\""
`;

exports[`VersionCommand normal mode versions changed packages: console output 1`] = `
"
Changes:
 - package-1: 1.0.0 => 1.0.1
 - package-2: 1.0.0 => 1.0.1
 - package-3: 1.0.0 => 1.0.1
 - package-4: 1.0.0 => 1.0.1
 - package-5: 1.0.0 => 1.0.1 (private)
"
`;

exports[`VersionCommand normal mode versions changed packages: gitHead 1`] = `
Object {
  "name": "package-1",
  "version": "1.0.1",
}
`;

exports[`VersionCommand normal mode versions changed packages: prompt 1`] = `
Array [
  Array [
    "Select a new version (currently 1.0.0)",
    Object {
      "choices": Array [
        Object {
          "name": "Patch (1.0.1)",
          "value": "1.0.1",
        },
        Object {
          "name": "Minor (1.1.0)",
          "value": "1.1.0",
        },
        Object {
          "name": "Major (2.0.0)",
          "value": "2.0.0",
        },
        Object {
          "name": "Prepatch (1.0.1-alpha.0)",
          "value": "1.0.1-alpha.0",
        },
        Object {
          "name": "Preminor (1.1.0-alpha.0)",
          "value": "1.1.0-alpha.0",
        },
        Object {
          "name": "Premajor (2.0.0-alpha.0)",
          "value": "2.0.0-alpha.0",
        },
        Object {
          "name": "Custom Prerelease",
          "value": "PRERELEASE",
        },
        Object {
          "name": "Custom Version",
          "value": "CUSTOM",
        },
      ],
    },
  ],
]
`;

exports[`VersionCommand versions all transitive dependents after change 1`] = `
"v2.0.0

HEAD -> master, tag: v2.0.0

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"2.0.0\\"
diff --git a/packages/package-1/package.json b/packages/package-1/package.json
index SHA..SHA 100644
--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -4 +4 @@
-  \\"version\\": \\"1.0.0\\"
+  \\"version\\": \\"2.0.0\\"
diff --git a/packages/package-2/package.json b/packages/package-2/package.json
index SHA..SHA 100644
--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -4 +4 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
@@ -6 +6 @@
-    \\"package-1\\": \\"^1.0.0\\"
+    \\"package-1\\": \\"^2.0.0\\"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -4 +4 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
@@ -6 +6 @@
-    \\"package-2\\": \\"^1.0.0\\"
+    \\"package-2\\": \\"^2.0.0\\"
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -4 +4 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
@@ -6 +6 @@
-    \\"package-3\\": \\"^1.0.0\\"
+    \\"package-3\\": \\"^2.0.0\\"
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -4 +4 @@
-  \\"version\\": \\"1.0.0\\",
+  \\"version\\": \\"2.0.0\\",
@@ -6 +6 @@
-    \\"package-4\\": \\"^1.0.0\\"
+    \\"package-4\\": \\"^2.0.0\\""
`;
